// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-0 1`] = `
<span
  class="inline-flex"
  data-domain-term="Borrador"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="Borrador"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    Borrador
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-1 1`] = `
<span
  class="inline-flex"
  data-domain-term="EnAutorizacionJefeCompras"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-warning-bg text-warning-fg"
    data-estado="EnAutorizacionJefeCompras"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    En autorización Jefe de Compras
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-2 1`] = `
<span
  class="inline-flex"
  data-domain-term="EnAutorizacionDireccion"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-warning-bg text-warning-fg"
    data-estado="EnAutorizacionDireccion"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    En autorización Dirección
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-3 1`] = `
<span
  class="inline-flex"
  data-domain-term="Autorizada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-info-bg text-info-fg"
    data-estado="Autorizada"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    Autorizada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-4 1`] = `
<span
  class="inline-flex"
  data-domain-term="Cerrada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-success-bg text-success-fg"
    data-estado="Cerrada"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    Cerrada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-5 1`] = `
<span
  class="inline-flex"
  data-domain-term="Cancelada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="Cancelada"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    Cancelada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="orden-compra" > snapshot por estado: cubre los 7 estados OC > oc-estado-6 1`] = `
<span
  class="inline-flex"
  data-domain-term="Rechazada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-danger-bg text-danger-fg"
    data-estado="Rechazada"
    data-slot="badge"
    data-tipo="orden-compra"
  >
    Rechazada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-0 1`] = `
<span
  class="inline-flex"
  data-domain-term="Borrador"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="Borrador"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Borrador
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-1 1`] = `
<span
  class="inline-flex"
  data-domain-term="EnAutorizacion"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-warning-bg text-warning-fg"
    data-estado="EnAutorizacion"
    data-slot="badge"
    data-tipo="requisicion"
  >
    En autorización
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-2 1`] = `
<span
  class="inline-flex"
  data-domain-term="Autorizada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-success-bg text-success-fg"
    data-estado="Autorizada"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Autorizada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-3 1`] = `
<span
  class="inline-flex"
  data-domain-term="EnSurtido"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-info-bg text-info-fg"
    data-estado="EnSurtido"
    data-slot="badge"
    data-tipo="requisicion"
  >
    En surtido
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-4 1`] = `
<span
  class="inline-flex"
  data-domain-term="Cerrada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-success-bg text-success-fg"
    data-estado="Cerrada"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Cerrada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-5 1`] = `
<span
  class="inline-flex"
  data-domain-term="Cancelada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="Cancelada"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Cancelada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-6 1`] = `
<span
  class="inline-flex"
  data-domain-term="Rechazada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-danger-bg text-danger-fg"
    data-estado="Rechazada"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Rechazada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-7 1`] = `
<span
  class="inline-flex"
  data-domain-term="Eliminada"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="Eliminada"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Eliminada
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-8 1`] = `
<span
  class="inline-flex"
  data-domain-term="CerradaSinSurtir"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-neutral-bg text-neutral-fg"
    data-estado="CerradaSinSurtir"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Cerrada sin surtir
  </span>
</span>
`;

exports[`<EstadoBadge> — tipo="requisicion" > snapshot por estado: cubre los 10 estados > rq-estado-9 1`] = `
<span
  class="inline-flex"
  data-domain-term="CerradaSurtidaParcial"
  data-state="closed"
>
  <span
    class="inline-flex items-center h-ctl-xs px-2 rounded-full text-xs font-medium whitespace-nowrap bg-info-bg text-info-fg"
    data-estado="CerradaSurtidaParcial"
    data-slot="badge"
    data-tipo="requisicion"
  >
    Cerrada surtida parcialmente
  </span>
</span>
`;
